--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - "80:8000"
 
   postgres:
-    image: postgres:15 
+    image: postgres:17-alpine 
     container_name: postgres_container
     environment:
       POSTGRES_USER: ${USER_POSTGRES}
@@ -39,6 +39,16 @@ services:
       POSTGRES_DB: ${NAME_POSTGRES}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    command: >
+      postgres
+      -c shared_buffers=64MB
+      -c effective_cache_size=128MB
+      -c maintenance_work_mem=16MB
+    deploy:
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: 256M
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${USER_POSTGRES} -d ${NAME_POSTGRES}"]
       interval: 10s
@@ -56,7 +66,7 @@ services:
       - MONGO_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/
 
   mongodb:
-    image: mongo:5
+    image: mongo:5-alpine
     container_name: mongodb
     restart: unless-stopped
     environment:
@@ -64,6 +74,11 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - mongo_data:/data/db
+    deploy:
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: 256M
     healthcheck:
       test: mongosh --eval "db.adminCommand('ping')" localhost:27017/test --quiet
       interval: 10s
